fix alignment of muted headings in meganav

--- a/static/sass/_pattern_navigation-dropdown.scss
+++ b/static/sass/_pattern_navigation-dropdown.scss
@@ -146,7 +146,7 @@
     }
 
     @media (min-width: $breakpoint-navigation-threshold) {
-      margin: 2rem 0;
+      margin: 2.5rem 0;
       padding: 0;
     }
 
@@ -174,7 +174,7 @@
   .dropdown-window__main-panel {
     @media (min-width: $breakpoint-navigation-threshold) {
       border-right: $dropdown-border;
-      margin: 2rem 0;
+      margin: 2.5rem 0;
       padding: 0 2rem 0 0;
     }
 
@@ -213,7 +213,7 @@
           // Main panel list items can contain more than one link,
           // setting position allows them to be clicked independently
           // of the primary/first link
-          margin-top: 1rem;
+          margin: 0.5 0 0.75rem;
           position: relative;
         }
 
